guest registration addition - issue 39

--- a/pwm/servlet/src/password/pwm/config/Display_nl.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_nl.properties
@@ -44,7 +44,7 @@ Button_Create=Maak
 Button_Activate=Activeer
 Button_Continue=Volgende
 Button_CloseWindow=Venster sluiten
-Button_Update=Update
+Button_Update=UWijzig
 Button_Verify=Nakijken
 Button_UnlockPassword=Wachtwoord ontsluiten
 Button_ConfirmResponses=Antwoorden bevestigen
@@ -82,6 +82,8 @@ Title_UserInformation=Gebruikersinformatie
 Title_RandomPasswords=Willekeurige wachtwoorden
 Title_PasswordGuide=Wachtwoordaanwijzingen
 Title_ForgottenUsername=Vergeten gebruikersnaam
+Title_GuestRegistration=Gastgebruiker registreren
+Title_GuestUpdate=Gastgebruiker wijzigen
 Title_Admin=Beheer
 
 Long_Title_Main_Menu=Hoofdmenu van wachtwoordzelfbediening. Hier kunt u uw huidige wachtwoord wijzigen, een vergeten wachtwoord herstellen of andere wachtwoordgerelateerde activiteiten uitvoeren.
@@ -96,7 +98,7 @@ Long_Title_Shortcuts=Persoonlijke weblinks.
 Long_Title_UserInformation=Informatie over uw wachtwoord en wachtwoordbeleid.
 Long_Title_Admin=PWM beheerfuncties
 Long_Title_Logout=Afmelden van de PWM wachtwoordzelfbediening.
-Long_Title_ForgottenUsername=Vind uw vergeten gebruikersnaam.
+Long_Title_ForgottenUsername=Zoek uw vergeten gebruikersnaam op.
 
 Display_Login=
 Display_PasswordExpired=Uw wachtwoord is verlopen. U moet een nieuw wachtwoord invoeren.
@@ -122,6 +124,8 @@ Display_ActivateUser=Om uw identiteit te bevestigen dient u de volgende informat
 Display_PleaseWaitBody=Uw wachtwoord wordt gewijzigd. Dit proces kan enige minuten duren. Even geduld alstublieft.
 Display_ErrorBody=Er is een fout opgetreden. Sluit alstublieft uw browser en probeer het later nog een keer. Als deze fout vaker voorkomt dient u contact op te nemen met de helpdesk.
 Display_UserEventHistory=Deze pagina laat uw wachtwoord historie zien. Enkel acties verricht via dit programma worden getoond. De tijden worden getoond in de %1% tijdzone.
+Display_GuestRegistration=Om een nieuw gastaccount aan te maken dient de volgende informatie te worden ingevuld.
+Display_GuestUpdate=Om een gastaccount te wijzigen dient de volgende informatie gecontroleer en eventueel gewijzigd te worden.
 Display_Logout=<b>U bent nu uitgelogd.</b><p/>Sluit alstublieft alle browservensters voordat u opnieuw probeert in te loggen.
 Display_PasswordWarn=Uw wachtwoord zal binnenkort verlopen.  Wijzig uw wachtwoord zo spoedig mogelijk om problemen te voorkomen. Uw wachtwoord zal verlopen op %1%.
 Display_PasswordNoExpire=Uw wachtwoord verloopt niet.
