--- a/pwm/servlet/src/password/pwm/error/PwmError_nl.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError_nl.properties
@@ -60,6 +60,10 @@ Password_TooManyMonAlpha=Het nieuwe wachtwoord heeft teveel niet alfanumerieke t
 Password_NotEnoughNonAlpha=Het nieuwe wachtwoord heeft niet genoeg niet alfanumerieke tekens.
 Password_UnknownValidation=Het wachtwoord voldoet niet aan de eisen.  Probeer een ander wachtwoord.
 
+NumberValidation_Invalid_Number="%field%" is geen geldig nummer
+NumberValidation_Lowerbound=De waarde is beneden de ondergrens (%field%).
+NumberValidation_Upperbound=De waarde is hoger dan de bovengrens (%field%).
+
 Error_WrongAnswer=\u00c9\u00e9n of meer antwoorden zijn incorrect.
 Error_WrongPassword=De gebruikersnaam of het wachtwoord is incorrect.
 Error_Response_WrongUsername=De gebruikersnaam is niet geldig of heeft geen antwoorden geconfigureerd
