--- a/pwm/servlet/src/password/pwm/config/Message_de.properties
+++ b/pwm/servlet/src/password/pwm/config/Message_de.properties
@@ -72,7 +72,8 @@ Success_PasswordChange=Das Passwort wurde erfolgreich ge\u00e4ndert.
 Success_SetupResponse=Ihre geheime Frage und Antwort wurden erfolgreich gespeichert.
 Success_Unknown=Der Vorgang wurde erfolgreich abgeschlossen.
 Success_CreateUser=Ihr neues Benutzerkonto wurde erfolgreich erstellt. F\u00fchren Sie den Vorgang bitte zuende, sonst erhalten Sie keinen Zugang zu Ihrem Konto.
-Success_ActivateUser=Ihr Benutzerkonto wurde erfolgreich aktiviert. F\u00fchren Sie den Vorgang bitte zuende, sonst erhalten Sie keinen Zugang zu Ihrem Konto.
+Success_CreateGuest=Das neues G\u00e4stekonto wurde erfolgreich erstellt. Der G\u00e4stbenÃ¼tzer wird einen Nachricht empfangen falls die Emailadresse eingegeben ist. Das G\u00e4stekonto braucht m\u00f6glich noch aktiviert werden.
+Success_CreateGuest=Das neues G\u00e4stekonto wurde erfolgreich erstellt. Der G\u00e4stbenützer wird einen Nachricht empfangen falls die Emailadresse eingegeben ist. Das G\u00e4stekonto braucht m\u00f6glich noch aktiviert werden.
 Success_UpdateAttributes=Ihre Benutzerinformation wurde erfolgreich aktualisiert.
 # Success_ResponsesMeetRules=Your responses meet the requirements.  Click Save Responses when ready.
 # Success_UnlockAccount=Your account has been unlocked.
