- copy profile feature - refactor token names - setting for user-stored history events

--- a/pwm/servlet/src/password/pwm/i18n/ConfigEditor.properties
+++ b/pwm/servlet/src/password/pwm/i18n/ConfigEditor.properties
@@ -262,6 +262,7 @@ Setting_Description_events.pwmDB.logLevel=Level at which to log events in the Lo
 Setting_Description_events.pwmDB.maxAge=Maximum age of events stored in LocalDB. <br/><br/>This setting does not effect log files configured in log4jconfig.xml or tomcat's log file settings.<br/><br/>Events older than the configured value here will be periodically purged.  Value is specified in seconds.  Default is 4 weeks (60s * 60m * 24h * 7d * 4w \= 2419200).  A value of zero will cause events not to be removed due to age.
 Setting_Description_events.pwmDB.maxEvents=Maximum log events stored in LocalDB.  This number of events will be retained in the LocalDB database and use these to display in the admin event log screen.<br/><br/>This setting does not effect the normal log files configured in log4jconfig.xml or tomcat's log file settings.<br/><br/>Approximately 100MB of disk space will be consumed for each 100,000 log events.
 Setting_Description_events.user.storageMethod=Data store used for user-specific audit history.  If using LDAP, this number should be kept small to avoid an unreasonably lengthy LDAP attribute value size.
+Setting_Description_events.user.eventList=Event types to store on user-specific audit history.
 Setting_Description_expireCheckDuringAuth=When the user is authenticated, should there be a check to see if the user's password is expired (or about to expire based on the expirePreTime).  If this is set to true, and the user's password is expired, they will be forced to the expire password page.
 Setting_Description_expirePreTime=Number of seconds before a user's password expires in which to force the user to change their password.  If the user's password will expire within this time frame, the system will behave as if the user's password has already expired. <br/><br/>Setting this value to a day or so will prevent most cases of a user's password expiring while they are logged in.  The recommend setting for this value is 86400 (1 day).
 Setting_Description_expireWarnTime=Number of seconds before a user's password expires in which to warn the user to change their password.  If the user's password will expire within this time frame, the system will warn the user during a CommandServlet checkExpire or checkAll operation. <br/><br/>If this time is zero or less than the expirePreTime, this feature will be disabled.  The recommended setting for this value is 432000 (5 days).
@@ -697,6 +698,7 @@ Setting_Label_events.pwmDB.logLevel=LocalDB Log Level
 Setting_Label_events.pwmDB.maxAge=Maximum Age LocalDB Events
 Setting_Label_events.pwmDB.maxEvents=Maximum LocalDB Events
 Setting_Label_events.user.storageMethod=User History Storage Location
+Setting_Label_events.user.eventList=User History Events
 Setting_Label_expireCheckDuringAuth=Check Expire During Authentication
 Setting_Label_expirePreTime=Password Pre-Expire Time
 Setting_Label_expireWarnTime=Password Expire Warn Time
