- fix url parameters

--- a/pwm/servlet/src/password/pwm/i18n/ConfigEditor.properties
+++ b/pwm/servlet/src/password/pwm/i18n/ConfigEditor.properties
@@ -168,7 +168,7 @@ Setting_Description_captcha.protectedPages=Pages protected by CAPTCHA.  CAPTCHA 
 Setting_Description_captcha.recaptcha.privateKey=Private reCAPTCHA key.  If blank no captcha verification will be performed.
 Setting_Description_captcha.recaptcha.publicKey=Public reCAPTCHA key.  If blank no captcha verification will be performed.
 Setting_Description_captcha.skip.cookie=Allows for skipping the captcha request if a known browser cookie value is held by the browser the cookie is stored in a cookie named 'captcha-key'.  If the value is correct,then the captcha check is skipped.  The cookie value is stored in the browser after a successful captcha check.<br/><br/>If blank, then no cookie will be read/stored.  If set to 'INSTANCEID', then the instanceID is used.  If set to any other value, then the literal value will be used.
-Setting_Description_captcha.skip.param=Allows for skipping the captcha request if a known parameter is passed as a request parameter with a key of "skipCaptcha".   This is useful for "internal" clients / links where the captcha is unneccessary.<br/><br/>For example, if the value is 'okay', a request to\:<br/><br/><i>/public/ForgottenPassword?skipCaptcha\=okay</i><br/><br/>would cause captcha to be bypassed.
+Setting_Description_captcha.skip.param=Allows for skipping the captcha request if a known parameter is passed as a request parameter with a key of "skipCaptcha".   This is useful for "internal" clients / links where the captcha is unneccessary.<br/><br/>For example, if the value is 'okay', a request to\:<br/><br/><i>/public/forgottenpassword?skipCaptcha\=okay</i><br/><br/>would cause captcha to be bypassed.
 Setting_Description_cas.clearPassUrl=For <a href\="http\://www.jasig.org/cas">CAS</a> authentication integration, enter the ClearPass url here.  If blank, CAS authentication integration will be disabled.<br/><br/>You will also need to edit the <i>WEB-INF/web.xml</i> file to enable CAS integration.  Uncomment the section for the CAS servlet filters, and modify the CAS servlet parameters as appropriate for your configuration.
 Setting_Description_challenge.allowDuplicateResponses=Control if each response is required to be unique
 Setting_Description_challenge.allowSetup.queryMatch=Permission used to determine if a user is a permitted to configure challenges.  The user must be returned during this ldap query or else the user will not be permitted to configure challenges.
@@ -306,7 +306,7 @@ Setting_Description_helpdesk.result.form=Field(s) to be shown as a result to sea
 Setting_Description_helpdesk.result.limit=result limit
 Setting_Description_helpdesk.search.filters=.
 Setting_Description_helpdesk.searchBase=If empty, the default ldap search base(s) will be used.
-Setting_Description_helpdesk.sendPassword=If true, send the password to the user using the method selected under Forgotten Password -> New Password Send Method.
+Setting_Description_helpdesk.sendPassword=If set to true, send the password to the user using the method selected under <code>@PwmSettingReference\:recovery.sendNewPassword.sendMethod@</code>
 Setting_Description_helpdesk.setPassword.maskValue=When entering the password for a user, should the value be masked by default.
 Setting_Description_helpdesk.setPassword.mode=Mode to allow helpdesk administrators to set passwords.  (Note the logged-in user must have proper ldap permissions.)
 Setting_Description_helpdesk.setPassword.writeAttributes=Actions to execute after a helpdesk actor modifies the user's password.  Macros may be used.
@@ -714,7 +714,7 @@ Setting_Label_forgottenUsername.searchFilter=Forgotten Username Search Filter
 Setting_Label_forgottenUsername.sendUsername.sendMethod=Username Send Method
 Setting_Label_forgottenUsername.usernameAttribute=Username LDAP Attribute
 Setting_Label_guest.adminAttribute=Administrator DN Attribute
-Setting_Label_guest.adminGroup=Guest Admin Query String
+Setting_Label_guest.adminGroup=Guest Admin Permission
 Setting_Label_guest.createContext=Creation Context
 Setting_Label_guest.editOriginalAdminOnly=Edit Guest By Original Administrator Only
 Setting_Label_guest.enable=Enable Guest Registration
@@ -722,7 +722,7 @@ Setting_Label_guest.expirationAttribute=Attribute Used To Store Account Expirati
 Setting_Label_guest.form=New Guest Form
 Setting_Label_guest.maxValidDays=Maximum Duration of Account Validity
 Setting_Label_guest.update.form=Update Guest Form
-Setting_Label_guest.writeAttributes=Write Attributes
+Setting_Label_guest.writeAttributes=Guest Creation Actions
 Setting_Label_helpdesk.actions=Helpdesk Actor Actions
 Setting_Label_helpdesk.clearOtp.button=Enable Clear One Time Password Settings Button
 Setting_Label_helpdesk.clearResponses=Clear Responses on Password Set
