configguide improvements and fixes

--- a/pwm/servlet/src/password/pwm/i18n/ConfigEditor.properties
+++ b/pwm/servlet/src/password/pwm/i18n/ConfigEditor.properties
@@ -1023,7 +1023,8 @@ Setting_Label_webservices.queryMatch=External Web Services Permissions
 Setting_Label_webservices.thirdParty.queryMatch=Web Services Third Party Permissions
 Setting_Label_wordlistCaseSensitive=Wordlist Case Sensitivity
 Template_Label_AD=Microsoft Active Directory
-Template_Label_DEFAULT=OpenLDAP, DirectoryServer389, Others
+Template_Label_DEFAULT=Others
 Template_Label_NOVL=NetIQ eDirectory
 Template_Label_NOVL_IDM=NetIQ IDM / OAuth Integration
 Template_Label_ORACLE_DS=Oracle Directory Server
+Template_Label_OPEN_LDAP=OpenLDAP
