--- a/pwm/servlet/src/password/pwm/i18n/Display.properties
+++ b/pwm/servlet/src/password/pwm/i18n/Display.properties
@@ -22,6 +22,7 @@
 
 Button_Activate=Activate
 Button_Agree=I Agree
+Button_Browse=Browse
 Button_Cancel=Cancel
 Button_ChangePassword=Change Password
 Button_ChangeResponses=Go Back
