mandatory applicationPath, http error handling and reference library reorg

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -78,6 +78,7 @@ Display_ConfirmResponses=Be sure your answers and questions are correct.  Check 
 Display_Day=day
 Display_Days=days
 Display_ErrorBody=An error has occurred. Please close your browser and try again later.  If this error occurs repeatedly, please contact your help desk.
+Display_ErrorReference=error reference %1%
 Display_ExpirationDate=Account expiration date (maximum %1% days)
 Display_FooterInfoText=
 Display_ForgottenPassword=If you have forgotten your password, follow the prompts to reset your password.
