--- a/src/main/resources/password/pwm/i18n/Error.properties
+++ b/src/main/resources/password/pwm/i18n/Error.properties
@@ -155,6 +155,7 @@ Error_LdapDataError=An LDAP data error has occurred.
 Error_MacroParseError=Macro parse error: %1%
 Error_NoProfileAssigned=No profile is assigned for this operation.
 Error_StartupError=An error occurred while starting the application.  Check the log files for information.
+Error_EnvironmentError=An error with the application environment has prevented the application from starting.
 
 Error_RemoteErrorValue=Remote Error: %1%
 
