Bug #941830 - [Enh] SSPR does not allow sending e-mails to multiple recipients simultaneously, particularly via a template.
I updated the code to allow for supplying multiple email addresses in the "To:" field, separated by commas.  The EmailQueueManager loops through each email separately so all recipients don't see each other.  I also added some help text to the dialog explaining: "Multiple email addresses can be provided, separated by commas."

--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -146,5 +146,5 @@ VerificationMethodDetail_TOKEN=An Email and/or SMS token is sent to the user for
 VerificationMethodDetail_OTP=TOTP authentication.  Referred to on user screens as Mobile App Authentication.
 VerificationMethodDetail_REMOTE_RESPONSES=Utilize a configured web service for user response verification.   See @PwmSettingReference:external.remoteResponses.url@.
 VerificationMethodDetail_NAAF=Use NetIQ Advanced Authentication Framework for verification.
-
+Instructions_Edit_Email=Multiple email addresses can be provided, separated by commas.
 
