Images and Password string
Added new images and changed the “Password” resource string to just
Password (from Current Password - there is already a current password
resource string).

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -192,7 +192,7 @@ Field_NetworkAddress=Network Address
 Field_NetworkHost=Network Host
 Field_NewPassword=New Password
 Field_Option_Select=Select a question
-Field_Password=Current Password
+Field_Password=Password
 Field_PasswordExpirationTime=Password Expiration Time
 Field_PasswordExpired=Password Expired
 Field_PasswordLocked=Password Locked (Intruder Detect)
