--- a/src/main/resources/password/pwm/i18n/Display_de.properties
+++ b/src/main/resources/password/pwm/i18n/Display_de.properties
@@ -189,7 +189,7 @@ Field_NetworkAddress=Netzwerkadresse
 Field_NetworkHost=Netzwerkhost
 Field_NewPassword=Neues Passwort
 Field_Option_Select=W\u00e4hlen Sie eine Frage aus.
-Field_Password=Aktuelles Passwort
+Field_Password=Passwort
 Field_PasswordExpirationTime=Ablaufzeit des Passworts
 Field_PasswordExpired=Passwort abgelaufen
 Field_PasswordLocked=Passwort gesperrt (Unbefugtenerkennung)
