--- a/src/main/resources/password/pwm/i18n/Display_fi.properties
+++ b/src/main/resources/password/pwm/i18n/Display_fi.properties
@@ -107,7 +107,7 @@ Field_CurrentPassword=Nykyinen salasana
 Field_Location=Sijainti
 Field_NewPassword=Uusi salasana
 Field_Option_Select=Valitse kysymys
-Field_Password=Nykyinen salasana
+Field_Password=Salasana
 Field_User_Supplied_Question=Kysymys
 Field_Username=K\u00e4ytt\u00e4j\u00e4tunnus
 Long_Title_ActivateUser=Aktivoi esi-konfiguroitu tunnus ja aseta uusi salasana.
