--- a/src/main/resources/password/pwm/i18n/Display_fr.properties
+++ b/src/main/resources/password/pwm/i18n/Display_fr.properties
@@ -193,7 +193,7 @@ Field_NetworkAddress=Adresse r\u00e9seau
 Field_NetworkHost=H\u00f4te r\u00e9seau
 Field_NewPassword=Nouveau mot de passe
 Field_Option_Select=S\u00e9lectionnez une question
-Field_Password=Mot de passe actuel
+Field_Password=Mot de passe
 Field_PasswordExpirationTime=Date d'expiration du mot de passe
 Field_PasswordExpired=Mot de passe arriv\u00e9 \u00e0 expiration
 Field_PasswordLocked=Mot de passe verrouill\u00e9 (d\u00e9tection d'intrus)
