--- a/src/main/resources/password/pwm/i18n/Display_it.properties
+++ b/src/main/resources/password/pwm/i18n/Display_it.properties
@@ -103,7 +103,7 @@ Field_CurrentPassword=Password Attuale
 Field_Location=Posizione
 Field_NewPassword=Nuova Password
 Field_Option_Select=Seleziona una domanda
-Field_Password=Password Attuale
+Field_Password=Password
 Field_User_Supplied_Question=Domanda
 Field_Username=Nome Utente
 Long_Title_ActivateUser=Attiva un utente pre-configurato e imposta una nuova password.
