--- a/src/main/resources/password/pwm/i18n/Display_nn.properties
+++ b/src/main/resources/password/pwm/i18n/Display_nn.properties
@@ -22,7 +22,7 @@
 
 
 Field_Username=Brukarnamn
-Field_Password=Gjeldande passord
+Field_Password=Passord
 Field_Location=Stad
 Field_NewPassword=Nytt passord
 Field_ConfirmPassword=Stadfest passord
