--- a/src/main/resources/password/pwm/i18n/Display_no.properties
+++ b/src/main/resources/password/pwm/i18n/Display_no.properties
@@ -22,7 +22,7 @@
 
 
 Field_Username=Brukernavn
-Field_Password=Gjeldende passord
+Field_Password=Passord
 Field_Location=Sted
 Field_NewPassword=Nytt passord
 Field_ConfirmPassword=Bekreft passord
