--- a/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
+++ b/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
@@ -189,7 +189,7 @@ Field_NetworkAddress=Endere\u00e7o de Rede
 Field_NetworkHost=Host de Rede
 Field_NewPassword=Nova Senha
 Field_Option_Select=Selecione uma pergunta
-Field_Password=Senha Atual
+Field_Password=Senha
 Field_PasswordExpirationTime=Hor\u00e1rio de Vencimento da Senha
 Field_PasswordExpired=Senha Expirada
 Field_PasswordLocked=Senha Bloqueada (Detec\u00e7\u00e3o de Intruso)
