--- a/src/main/resources/password/pwm/i18n/Display_sv.properties
+++ b/src/main/resources/password/pwm/i18n/Display_sv.properties
@@ -189,7 +189,7 @@ Field_NetworkAddress=N\u00e4tverksadress
 Field_NetworkHost=N\u00e4tverksv\u00e4rd
 Field_NewPassword=Nytt l\u00f6senord
 Field_Option_Select=V\u00e4lj en fr\u00e5ga
-Field_Password=Nuvarande l\u00f6senord
+Field_Password=L\u00f6senord
 Field_PasswordExpirationTime=Tidpunkt f\u00f6r n\u00e4r l\u00f6senordet f\u00f6rfaller
 Field_PasswordExpired=L\u00f6senordet har g\u00e5tt ut
 Field_PasswordLocked=L\u00f6senordet \u00e4r l\u00e5st (inkr\u00e4ktare uppt\u00e4ckt)
