Login change to Sign in
Changed the login text string to use Sign in

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -41,8 +41,8 @@ Button_GoBack=Go Back
 Button_Hide=Hide
 Button_Hide_Responses=Hide Responses
 Button_Home=Home
-Button_Login=Login
-Button_Logout=Logout
+Button_Login=Sign in
+Button_Logout=Sign out
 Button_More=More
 Button_OrgChart=Organizational Chart
 Button_RecoverPassword=Check Answers
