--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -95,7 +95,7 @@ Display_JavascriptRequired=Javascript is required to view this page.
 Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be changed.
 Display_Login=
 Display_LoginPasswordOnly=Please enter your password below.  Your current password is required to access this application.
-Display_Logout=<b>You are now logged out.</b><p/>Please close all internet browser windows before you try to login again.
+Display_Logout=<b>You are now signed out.</b><p/>Please close all internet browser windows before you try to sign in again.
 Display_Minute=minute
 Display_Minutes=minutes
 Display_NAAF_PASSWORD=Please provide your NAAF authentication password.
@@ -233,12 +233,12 @@ Long_Title_ForgottenUsername=Find your forgotten username.
 Long_Title_GuestRegistration=Register a new guest user account.
 Long_Title_GuestUpdate=Update a new guest user account.
 Long_Title_Helpdesk=Helpdesk tools
-Long_Title_Logout=Logout of the password self service application.
+Long_Title_Logout=Sign out of the password self service application.
 Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
 Long_Title_NewUser=Create a new user account.
 Long_Title_PeopleSearch=Lookup contact information for your colleagues.
-Long_Title_SetupResponses=Setup your forgotten password security questions and answers.  These secret answers will allow you to recover your password if you forget it.
-Long_Title_SetupOtpSecret=Setup your mobile app device.  If you forget your password, you can use your mobile device to authenticate to this site.
+Long_Title_SetupResponses=Security questions and answers allow you to recover a forgotten password.
+Long_Title_SetupOtpSecret=Setup mobile app device.  If you forget your password, you can use your mobile device to authenticate to this site.
 Long_Title_Shortcuts=Personalized shortcuts.
 Long_Title_UpdateProfile=Update your user profile data.
 Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
@@ -257,8 +257,8 @@ Title_GuestRegistration=Guest Registration
 Title_GuestUpdate=Update Guest User
 Title_Helpdesk=Helpdesk
 Title_LocaleSelect=Locale Selection
-Title_Login=Please Log In
-Title_Logout=Logout
+Title_Login=Please Sign in
+Title_Logout=Sign out
 Title_MainPage=Main Menu
 Title_NewUser=New User Registration
 Title_OrgChart=Organizational Chart
