--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -22,6 +22,10 @@
 
 # Strings found in "ConfigManager" viewable sections of the application
 
+Actor_proxy=Proxy User
+Actor_self=Self (Logged in User)
+Actor_helpdesk=Helpdesk Operator
+Actor_guestManager=Guest Manager
 Button_Next=Next
 Button_Previous=Previous
 Button_CheckSettings=Check Settings
