--- a/src/main/resources/password/pwm/i18n/ConfigEditor.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigEditor.properties
@@ -59,6 +59,7 @@ Category_Description_NAAF=NAAF (Advanced Authentication Framework)
 Category_Description_NEWUSER=New user self registration settings.  The new user registration module requires that the proxy user has sufficient permissions to create users and, if so configured, to check for duplicate values.  New users are created in the default LDAP directory profile.
 Category_Description_NEWUSER_PROFILE=New user self registration settings.  The new user registration module requires that the proxy user has sufficient permissions to create users and, if so configured, to check for duplicate values.  New users are created in the default LDAP directory profile.
 Category_Description_NEWUSER_SETTINGS=New user self registration settings.  The new user registration module requires that the proxy user has sufficient permissions to create users and, if so configured, to check for duplicate values.  New users are created in the default LDAP directory profile.
+Category_Description_NOTES=Configuration Notes
 Category_Description_OAUTH=Integration with an OAuth identity server for SSO to this application.
 Category_Description_ORACLE_DS=Oracle Directory Server specific settings
 Category_Description_OTP=Options for time based one time passwords.
@@ -79,6 +80,7 @@ Category_Description_SMS=Configuration settings for interfacing with SMS service
 Category_Description_SMS_GATEWAY=
 Category_Description_SMS_MESSAGES=
 Category_Description_SSO=
+Category_Description_TEMPLATES=
 Category_Description_TOKEN=Options for email and sms tokens sent to users.  Chose a token method appropriate to your environment.
 Category_Description_UI_FEATURES=
 Category_Description_UI_WEB=
@@ -126,6 +128,7 @@ Category_Label_NAAF=NAAF
 Category_Label_NEWUSER=New User Registration
 Category_Label_NEWUSER_PROFILE=New User Profiles
 Category_Label_NEWUSER_SETTINGS=New User Settings
+Category_Label_NOTES=Configuration Notes
 Category_Label_OAUTH=OAuth
 Category_Label_ORACLE_DS=Oracle DS
 Category_Label_OTP=One Time Password
@@ -146,6 +149,7 @@ Category_Label_SMS_GATEWAY=SMS Gateway
 Category_Label_SMS_MESSAGES=SMS Messages
 Category_Label_SMS=SMS
 Category_Label_SSO=Single Sign On
+Category_Label_TEMPLATES=Templates
 Category_Label_TOKEN=Tokens
 Category_Label_UI_FEATURES=UI Features
 Category_Label_UI_WEB=Look & Feel
@@ -402,6 +406,7 @@ Setting_Description_newUser.profile.displayName=The publicly viewable display na
 Setting_Description_newUser.profile.list=List of New User profiles.  When multiple new user profiles are configured, the user will be able to select which profile to complete.  The value of the setting <code>@PwmSettingReference\:newUser.profile.displayName@</code> will be shown as the profile name to users.
 Setting_Description_newUser.sms.verification=If true, an SMS will be sent to the new user's mobile phone number before the account is created.  The NewUser must verify receipt of the SMS before the account will be created.
 Setting_Description_newUser.username.definition=\n        <p>This setting controls the entry id of the newly created LDAP entry.  In some directories this is often used\n        as the "username", though many directories separate the concepts and values of entry ID and username.</p>\n        <p>Values can (and usually do) include macros.  In case the first value\n        is already existing in the directory, each successive value is tried until a free value is found.  Though the user\n        is not yet created when the macros are evaluated, LDAP macros will use the data provided on the new user form.  Other\n        macros may not be useful as there no data yet available on the user.</p>\n        <p>If blank, the username must be present in the form, defined as the LDAP naming attribute value.</p>\n
+Setting_Description_notes.noteText=Configuration Notes
 Setting_Description_newUser.writeAttributes=Actions to be taken when a user is created.  These actions will be executed just after creating the object.
 Setting_Description_oauth.idserver.attributesUrl=Web service provided by the identity server to return attribute data about the user.
 Setting_Description_oauth.idserver.clientName=OAuth client ID.  This value will be provided by the OAuth identity service provider.
@@ -572,6 +577,8 @@ Setting_Description_sms.senderID=Alphanumerical sender identification. If blank,
 Setting_Description_sms.successResultCodes=HTTP Result codes that will be considered successful send attempts.
 Setting_Description_sms.userSmsAttribute=User LDAP attribute containing the user's mobile phone number for SMS.
 Setting_Description_sms.useUrlShortener=Enable this option to use a url shortener service like tinyurl.com, bit.ly and goo.gl. This will enable searching the SMS text for http and https urls and replace them with a shortened version. The service to be used can be configured under the Miscellaneous options. Be sure to check View|Advanced.
+Setting_Description_template.ldap=LDAP Template
+Setting_Description_template.storage=Storage Template
 Setting_Description_token.characters=Available characters for the email token.
 Setting_Description_token.ldap.attribute=When using the LDAP Token Storage Method, this attribute will be used to store and search for tokens.
 Setting_Description_token.length=Length of the email token
@@ -843,6 +850,7 @@ Setting_Label_newUser.profile.list=New User Profile
 Setting_Label_newUser.sms.verification=Enable New User SMS Verification
 Setting_Label_newUser.username.definition=LDAP Entry ID Definition
 Setting_Label_newUser.writeAttributes=New User Actions
+Setting_Label_notes.noteText=Configuration Notes
 Setting_Label_oauth.idserver.attributesUrl=OAuth Profile Service URL
 Setting_Label_oauth.idserver.clientName=OAuth Client ID
 Setting_Label_oauth.idserver.codeResolveUrl=OAuth Code Resolve Service URL
@@ -1012,6 +1020,8 @@ Setting_Label_sms.senderID=SMS Sender ID
 Setting_Label_sms.successResultCodes=Successful HTTP Result Codes
 Setting_Label_sms.userSmsAttribute=SMS Destintion Address LDAP Attribute
 Setting_Label_sms.useUrlShortener=Use URL Shortener
+Setting_Label_template.ldap=LDAP Template
+Setting_Label_template.storage=Storage Template
 Setting_Label_token.characters=Token Characters
 Setting_Label_token.ldap.attribute=Token LDAP attribute name
 Setting_Label_token.length=Token Length
