implement multiple template configuration model + storage and db_vendor templates

--- a/src/main/resources/password/pwm/i18n/ConfigEditor.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigEditor.properties
@@ -34,6 +34,8 @@ Category_Description_CHALLENGE_POLICY=Define the challenge policy users will use
 Category_Description_CHALLENGE=Settings that control challenge/response features.  These global settings apply regardless of the challenge policy.  For profile-specific challenge settings, see Profiles --> Challenge Profiles.
 Category_Description_CHANGE_PASSWORD=The change password module is the core functionality of the application.  Use these settings to control the behavior and functionality of the change password functionality seen by all users.
 Category_Description_DATABASE=Optional database configuration settings.  If configured, a remote RDBMS SQL-complaint database can be used to store data for certain functions.  Any standard RDBMS that supports a standard Java JDBC driver can work.  Upon startup, a database connection will be made and any necessary tables and schema will be created.  Multiple application instances can be configured for the same database instance.
+Category_Description_DATABASE_ADV=Advanced database configuration settings.
+Category_Description_DATABASE_SETTINGS=Settings
 Category_Description_EDIR_CR_SETTINGS=NetIQ eDirectory CR specific settings.
 Category_Description_EDIRECTORY=NetIQ eDirectory specific settings.
 Category_Description_EDIR_SETTINGS=NetIQ eDirectory specific settings.
@@ -104,6 +106,8 @@ Category_Label_CHALLENGE=Challenge Settings
 Category_Label_CHALLENGE_POLICY=Challenge Policies
 Category_Label_CHANGE_PASSWORD=Change Password
 Category_Label_DATABASE=Database (Remote)
+Category_Label_DATABASE_ADV=Advanced
+Category_Label_DATABASE_SETTINGS=Connection
 Category_Label_EDIR_CR_SETTINGS=eDirectory Challenge Sets
 Category_Label_EDIRECTORY=NetIQ eDirectory
 Category_Label_EDIR_SETTINGS=eDirectory Settings
@@ -213,6 +217,7 @@ Setting_Description_db.jdbc.driver=Database JDBC Driver JAR or ZIP file supplied
 Setting_Description_db.password=Database connection password
 Setting_Description_db.url=Database connection string in standard JDBC format.  Your database administrator should be able to help you with this setting.  This setting configures the Java JDBC database driver with the information required to reach your database server such as IP address, port number, and DB name.<br/><br/><table><tr><td class\="key">Database Type</td><td class\="key">Example Connection String</td></tr><tr><td>MS-SQL </td><td>jdbc\:sqlserver\://host.example.net\:port;databaseName\=@PwmAppName@</td></tr><tr><td>MS-SQL using jTDS</td><td>jdbc\:jtds\:sqlserver\://host.example.net\:port/@PwmAppName@</td></tr><tr><td>Oracle</td><td> jdbc:oracle:thin:@//host.example.net:1521/@PwmAppName@</td></tr></table><div class="footnote">The above are examples only, consult your database documentation for the proper connection string syntax.</div>
 Setting_Description_db.username=Database connection username
+Setting_Description_db.vendor.template=Database vendor.
 Setting_Description_disallowedInputs=Disallowed values.  If any input values (on any http parameter) matches these patterns, the matching portion will be stripped from the input.
 Setting_Description_display.accountInformation=Show User Account Information menu on main menu.
 Setting_Description_display.activateUser.agreement=<p>Message to display to user before being allowed to activate their account. If blank, the activate user agreement page will not be displayed to the user. This message may include HTML tags.
@@ -656,6 +661,7 @@ Setting_Label_db.jdbc.driver=Database Driver
 Setting_Label_db.password=Database Password
 Setting_Label_db.url=Database Connection String
 Setting_Label_db.username=Database Username
+Setting_Label_db.vendor.template=Database Vendor
 Setting_Label_disallowedInputs=Disallowed HTTP Inputs
 Setting_Label_display.accountInformation=Enable Account Information
 Setting_Label_display.activateUser.agreement=Activate User Agreement Message
@@ -1044,12 +1050,3 @@ Setting_Label_webservices.queryMatch=External Web Services Permissions
 Setting_Label_webservices.thirdParty.queryMatch=Web Services Third Party Permissions
 Setting_Label_webservice.userAttributes=Web Service User Attributes
 Setting_Label_wordlistCaseSensitive=Wordlist Case Sensitivity
-Template_Label_AD=Microsoft Active Directory
-Template_Label_DB=Remote Database
-Template_Label_DEFAULT=Others
-Template_Label_LDAP=LDAP
-Template_Label_LOCALDB=LocalDB (Testing Only)
-Template_Label_NOVL_IDM=NetIQ IDM / OAuth Integration
-Template_Label_NOVL=NetIQ eDirectory
-Template_Label_OPEN_LDAP=OpenLDAP
-Template_Label_ORACLE_DS=Oracle Directory Server
