--- a/src/main/resources/password/pwm/i18n/ConfigGuide.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigGuide.properties
@@ -20,7 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-ldap_admin_description=<p>Please enter the credentials for your LDAP server.  For best security, use a proxy account created specifically for this application.  The proxy account must have sufficient rights to administer the users that will be logging into this system.  Use the fully qualified LDAP distinguished name (DN) of the proxy account.  </p><p>The browse feature for this page requires that your LDAP directory permit anonymous bind.</p>
+ldap_admin_description=<p>Please enter the credentials for your LDAP server.  For best security, use a proxy account created specifically for this application.  The proxy account must have sufficient rights to administer the users that will be logging into this system.  Use the fully qualified LDAP distinguished name (DN) of the proxy account.  </p><p>Using the browse feature for this setting requires that your LDAP directory permit anonymous bind.</p>
 ldap_admin_title=LDAP Proxy Credentials
 ldap_admin_title_proxy-dn=Proxy DN
 ldap_admin_title_proxy-pw=Proxy Password
@@ -37,5 +37,5 @@ ldap_testuser_description= <p>@PwmAppName@ can periodically check the connection
 password_description=To protect this system, you will need to set a configuration password.  The configuration password will be required whenever you wish to modify the configuration using the web based configuration manager.
 password_title=Configuration Password
 password_title_verify=Verify Configuration Password
-template_description=<p>Begin your configuration by selecting a default template below.  If you decide to change your selection later, you can choose a different template at any time.</p><p>Setting the template does not directly modify the configuration, but it does change the correct default values for some settings to reasonable values.</p>
+template_description=<p>Begin your configuration by selecting the LDAP directory setting template.  You can change this setting later if you need to.</p><p>Setting this template will establish appropriate default values for many of the application settings.</p>
 title=@PwmAppName@ Configuration Guide
