forgotten username setting changes and refactoring

--- a/src/main/resources/password/pwm/i18n/ConfigEditor.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigEditor.properties
@@ -293,7 +293,7 @@ Setting_Description_forgottenUsername.enable=Enable forgotten username registrat
 Setting_Description_forgottenUsername.form=Field(s) to be used for search for the username.
 Setting_Description_forgottenUsername.searchFilter=LDAP search filter used to search for users during forgotten username recovery. &nbsp;The LDAP search filter should include each attribute in the <i>Forgotten Username Form</i>.  Tokens made of a form item name (such as <code>cn</code>) enclosed with a percent sign <code>%cn%</code> will be replaced with values supplied by the user.<br><br>For example, if the <i>Forgotten Username Form</i> included the attributes <code>cn</code> and <code>sn</code>, then this filter may be appropriate\:<br><br><code>(&amp;(objectClass\=person)(cn\=%cn%)(sn\=%sn%))</code><br><br>If this setting is left blank, a search filter based on the required items in the <i>Forgotten Username Form</i> will be automatically generated at the time of the search.
 Setting_Description_forgottenUsername.sendUsername.sendMethod=Method to send username to user.  In the contents of the message you can use the a macro as appropriate.</i>
-Setting_Description_forgottenUsername.usernameAttribute=LDAP Attribute to read as the username of the user.
+Setting_Description_forgottenUsername.message=Message to show user upon successful forgotten username action.
 Setting_Description_guest.adminAttribute=Attribute in which the DN of the logged in user will be written to in ldap when a guest user is created. This attribute will be written to the user object just after creating the object.
 Setting_Description_guest.adminGroup=Query string used to detect if a user is a guest administrator. An LDAP query is performed during login against the logged in user to determine if the user is a guest administrator. If the user matches the query, then the user is considered a guest administrator.
 Setting_Description_guest.createContext=LDAP context for new guest accounts to be created in.
@@ -737,7 +737,7 @@ Setting_Label_forgottenUsername.enable=Enable Forgotten Username
 Setting_Label_forgottenUsername.form=Forgotten Username Form
 Setting_Label_forgottenUsername.searchFilter=Forgotten Username Search Filter
 Setting_Label_forgottenUsername.sendUsername.sendMethod=Username Send Method
-Setting_Label_forgottenUsername.usernameAttribute=Username LDAP Attribute
+Setting_Label_forgottenUsername.message=Forgotten Username Message
 Setting_Label_guest.adminAttribute=Administrator DN Attribute
 Setting_Label_guest.adminGroup=Guest Admin Permission
 Setting_Label_guest.createContext=Creation Context
