add pwm setting property enum

--- a/src/main/resources/password/pwm/i18n/ConfigEditor.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigEditor.properties
@@ -764,8 +764,8 @@ Setting_Label_helpdesk.otp.verify=Enable OTP Verification Button
 Setting_Label_helpdesk.profile.list=Helpdesk Profile
 Setting_Label_helpdesk.queryMatch=Helpdesk Profile Match
 Setting_Label_helpdesk.result.form=Helpdesk Search Form
-Setting_Label_helpdesk.result.limit=Helpdesk search result limit
-Setting_Label_helpdesk.searchBase=LDAP Search base
+Setting_Label_helpdesk.result.limit=Helpdesk Search Result Limit
+Setting_Label_helpdesk.searchBase=LDAP Search Base
 Setting_Label_helpdesk.search.filters=Helpdesk Profile Search Filter
 Setting_Label_helpdesk.sendPassword=Send Password to User
 Setting_Label_helpdesk.setPassword.maskValue=Mask Password Value
