--- a/src/main/resources/password/pwm/i18n/ConfigEditor.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigEditor.properties
@@ -87,6 +87,8 @@ Category_Description_TOKEN=Options for email and sms tokens sent to users.  Chos
 Category_Description_UI_FEATURES=
 Category_Description_UI_WEB=
 Category_Description_UPDATE=The update user profile module will force/allow the user to update the attributes configured here.  This is useful for forcing the user to populate to update some piece of information.
+Category_Description_UPDATE_SETTINGS=.
+Category_Description_UPDATE_PROFILE=.
 Category_Description_USER_HISTORY=Auditing
 Category_Description_USER_INTERFACE=These settings control application wide features and display format that is visible to the end user.
 Category_Description_WEB_SECURITY=
@@ -158,6 +160,8 @@ Category_Label_TOKEN=Tokens
 Category_Label_UI_FEATURES=UI Features
 Category_Label_UI_WEB=Look & Feel
 Category_Label_UPDATE=Update Profile
+Category_Label_UPDATE_SETTINGS=Update Profile Settings
+Category_Label_UPDATE_PROFILE=Update Profile Profiles
 Category_Label_USER_HISTORY=User History
 Category_Label_USER_INTERFACE=User Interface
 Category_Label_WEB_SECURITY=Web Security
@@ -1037,9 +1041,9 @@ Setting_Label_updateAttributes.check.queryMatch=Update Profile Check Match
 Setting_Label_updateAttributes.enable=Enable Update Profile
 Setting_Label_updateAttributes.forceSetup=Force Update Profile
 Setting_Label_updateAttributes.form=Update Profile Form
-Setting_Label_updateAttributes.queryMatch=Update Profile Permission
+Setting_Label_updateAttributes.queryMatch=Update Profile Match
 Setting_Label_updateAttributes.showConfirmation=Show Update Profile Confirmation
-Setting_Label_updateAttributes.writeAttributes=Update Write Actions
+Setting_Label_updateAttributes.writeAttributes=Update Profile Actions
 Setting_Label_urlshortener.classname=Enable URL Shortening Service Class
 Setting_Label_urlshortener.parameters=Configuration Parameters for URL Shortening Service
 Setting_Label_useXForwardedForHeader=Use X-Forwarded-For Header
