login cookie refactoring and setting

--- a/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/src/main/resources/password/pwm/i18n/Admin.properties
@@ -266,6 +266,8 @@ Statistic_Label.RecoveryOTPPassed=Forgotten Password OTP Secrets Verified
 Statistic_Description.RecoveryOTPPassed=Number of OTP secrets used by the forgotten password process successfully and correctly verified.
 Statistic_Label.RecoveryOTPFailed=Forgotten Password OTP Secrets Failed
 Statistic_Description.RecoveryOTPFailed=Number of invalid attempts to verify OTP secrets used by the forgotten password process.
+Statistic_Label.ForeignSessionsAccepted=Foreign Sessions Accepted
+Statistic_Description.ForeignSessionsAccepted=Number of sessions generated on a foreign or server or previous instance of this server and accepted as valid authentication.
 Statistic_Label.EpsType_PASSWORD_CHANGES=Password Changes
 Statistic_Label.EpsType_AUTHENTICATION=Authentications
 Statistic_Label.EpsType_INTRUDER_ATTEMPTS=Intruder Attempts
