--- a/src/main/resources/password/pwm/i18n/ConfigEditor.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigEditor.properties
@@ -549,6 +549,7 @@ Setting_Description_response.hashMethod=<p>The method of Hashing used to store r
 Setting_Description_security.cspHeader=Set the HTTP Content-Security-Policy header.  This header instructs the browser to limit the locations from which it will load fonts, scripts and css files.
 Setting_Description_security.formNonce.enable=Require a nonce (or unique key) for each form to prevent certain types of cross-site scripting (XSS) attacks.
 Setting_Description_security.ldap.simulateBadPassword=This feature will enable Bad Password simulation activity when a forgotten password field is entered.  When an identified user attempts to recover a forgotten password but uses incorrect data, the application will attempt to authenticate to the directory using a known bad password value.  This is done to allow the ldap directory to trigger it's own defense mechanisms against intruders.
+Setting_Description_security.loginCookie.enable=<p>Enable the use of cross-server login cookie session tracking.  This feature allows authenticated users to maintain a login session across multiple server instances of @PwmAppName@.  This feature will also allow users to remain authenticated to the same server after a server restart.</p><p>The setting <a data-gotoSettingLink\="pwm.securityKey">@PwmSettingReference\:pwm.securityKey@</a> must have consistent values across each server participating.  Encrypted user data is stored in a client-agent session cookie.</p>
 Setting_Description_security.page.enableRequestSequence=Enable detection of the use of back button or other browser navigation irregularities.  Enabling this option prevents duplicate HTTP form submissions but can sometimes have side effects.
 Setting_Description_security.page.leaveNoticeTimeout=When a user navigates away from any page, a notice is sent to the server.   The next time a page is requested, the timeout is checked to determine if the last page leave time was greater then the timeout, and if so, the user's session will be invalidated.  This has the effect of logging out users that navigate away from the application without explicitly logging out.If set to zero, this feature is disabled.
 Setting_Description_security.preventFraming=When enabled, prevent this application from being displayed inside an IFrame.  This is done by setting the <i>X-Frame-Options</i> HTTP Header to <i>DENY</i> on all pages.
@@ -993,6 +994,7 @@ Setting_Label_response.hashMethod=Responses Storage Hashing Method
 Setting_Label_security.cspHeader=HTTP Content Security Policy Header
 Setting_Label_security.formNonce.enable=Enable Form Nonce
 Setting_Label_security.ldap.simulateBadPassword=Enable Bad Password Simulation
+Setting_Label_security.loginCookie.enable=Enable Cross-Server Session
 Setting_Label_security.page.enableRequestSequence=Enable Back Button Detection
 Setting_Label_security.page.leaveNoticeTimeout=Page Leave Notice Timeout
 Setting_Label_security.preventFraming=Prevent HTML Framing
