profile update sms and email verification

--- a/src/main/resources/password/pwm/i18n/ConfigEditor.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigEditor.properties
@@ -270,6 +270,7 @@ Setting_Description_email.smtp.username=Any emails generated will be sent by log
 Setting_Description_email.smtp.userpassword=Any emails generated will be sent by logging into server with this password.  A blank value will here will send SMTP messages without authentication.
 Setting_Description_email.updateguest=Email sent to updated guest users.
 Setting_Description_email.updateProfile=Email sent to users after a profile update.
+Setting_Description_email.updateProfile.token=Email sent to user during profile email validation.
 Setting_Description_email.userMailAttribute=User LDAP attribute containing the user's email address.
 Setting_Description_enableSessionVerification=If enabled, browser sessions will be verified using an HTTP redirect and verification code.  This verification proves that the browser can correctly establish a session with the server.  Verification proves the browser either supports cookies or URL sessions (if enabled) and the communication channel between browser and application server is 'sticky' when their are multiple server instances.  Additionally it helps prevent some types of XSS attacks.<br/><br/>The pre-load browser cache will show a "please wait" screen to the user during the verification.  This has the added benefit that many of the HTTP resources (javascript, css, images, etc) will be "pre-cached" by the browser before any actual pages are loaded.
 Setting_Description_events.alert.dailySummary.enable=If true, send an email alert once a day (at 0\:00 GMT) summary of the day's statistics and health.
@@ -567,6 +568,7 @@ Setting_Description_sms.challenge.newpassword.message=Message text of SMS with n
 Setting_Description_sms.challenge.token.message=Message text of SMS sent during forgotten password token process.
 Setting_Description_sms.defaultCountryCode=Default country code for SMS phone numbers, see <a href\="http\://countrycode.org/" target\="_blank">http\://countrycode.org/</a> for a list of country codes. Set to 0 to disable.
 Setting_Description_sms.forgottenUsername.message=Text of SMS sent upon successful forgotten username sequence, if so configured.
+Setting_Description_sms.updateProfile.token.message=Text of SMS sent during profile update SMS phone number verification.
 Setting_Description_sms.gatewayAuthMethod=Method to be used for authentication on the SMS gateway.
 Setting_Description_sms.gatewayMethod=HTTP(S) protocol method to be used for sending SMS messages.
 Setting_Description_sms.gatewayPassword=User password for the SMS gateway
@@ -716,6 +718,7 @@ Setting_Label_email.smtp.username=SMTP Email Server Username
 Setting_Label_email.smtp.userpassword=SMTP Email Server Password
 Setting_Label_email.updateguest=Guest Registration Update Email
 Setting_Label_email.updateProfile=Update Profile Email
+Setting_Label_email.updateProfile.token=Update Profile Email Verification
 Setting_Label_email.userMailAttribute=User Email Attribute
 Setting_Label_enableSessionVerification=Session Verification
 Setting_Label_events.alert.dailySummary.enable=Daily Summary Alerts
@@ -1013,6 +1016,7 @@ Setting_Label_sms.challenge.newpassword.message=Forgotten Password New Password 
 Setting_Label_sms.challenge.token.message=Forgotten Password SMS Text
 Setting_Label_sms.defaultCountryCode=Default SMS Country Code
 Setting_Label_sms.forgottenUsername.message=Forgotten Username SMS Text
+Setting_Label_sms.updateProfile.token.message=Update Profile SMS Verification Text
 Setting_Label_sms.gatewayAuthMethod=SMS Gateway Authentication Method
 Setting_Label_sms.gatewayMethod=HTTP(S) Method
 Setting_Label_sms.gatewayPassword=SMS Gateway Password
@@ -1043,10 +1047,12 @@ Setting_Label_token.lifetime=Token Maximum Lifetime
 Setting_Label_token.storageMethod=Token Storage Method
 Setting_Label_updateAttributes.check.queryMatch=Update Profile Check Match
 Setting_Label_updateAttributes.enable=Enable Update Profile
+Setting_Label_updateAttributes.email.verification=Enable Email Verification
 Setting_Label_updateAttributes.forceSetup=Force Update Profile
 Setting_Label_updateAttributes.form=Update Profile Form
 Setting_Label_updateAttributes.queryMatch=Update Profile Match
 Setting_Label_updateAttributes.showConfirmation=Show Update Profile Confirmation
+Setting_Label_updateAttributes.sms.verification=Enable SMS Verification
 Setting_Label_updateAttributes.writeAttributes=Update Profile Actions
 Setting_Label_urlshortener.classname=Enable URL Shortening Service Class
 Setting_Label_urlshortener.parameters=Configuration Parameters for URL Shortening Service
@@ -1058,3 +1064,7 @@ Setting_Label_webservices.queryMatch=External Web Services Permissions
 Setting_Label_webservices.thirdParty.queryMatch=Web Services Third Party Permissions
 Setting_Label_webservice.userAttributes=Web Service User Attributes
 Setting_Label_wordlistCaseSensitive=Wordlist Case Sensitivity
+
+
+Setting_Description_updateAttributes.email.verification=If true, an email will be sent to the user's email address before the account is updated.  The user must verify receipt of the email before the account will be updated.
+Setting_Description_updateAttributes.sms.verification=If true, an SMS will be sent to the user's mobile phone number before the account is updated.  The user must verify receipt of the SMS before the account will be updated.
