--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -171,6 +171,8 @@ Display_ShowPasswordGuide=Password Guide
 Display_StrengthMeter=Password Strength
 Display_UpdateProfile=Please update the following information:
 Display_UpdateProfileConfirm=Please review the following information you have entered and confirm.
+Display_UpdateProfileEnterCode=To verify your email address, a code has been sent to you at <b>%1%</b>.  Please enter the code here to continue.
+Display_UpdateProfileEnterCodeSMS=To verify your phone number, a code has been sent to you at <b>%1%</b>.  Please enter the code here to continue.
 Display_UserEventHistory=This page shows your password event history. Only actions performed with this application are shown here. All times listed are in the %1% timezone.
 Display_TypingWait=Waiting for typing to complete....
 Field_AccountEnabled=Account Enabled
