--- a/src/main/resources/password/pwm/i18n/ConfigEditor.properties
+++ b/src/main/resources/password/pwm/i18n/ConfigEditor.properties
@@ -550,12 +550,12 @@ Setting_Description_response.hashMethod=<p>The method of Hashing used to store r
 Setting_Description_security.cspHeader=Set the HTTP Content-Security-Policy header.  This header instructs the browser to limit the locations from which it will load fonts, scripts and css files.
 Setting_Description_security.formNonce.enable=Require a nonce (or unique key) for each form to prevent certain types of cross-site scripting (XSS) attacks.
 Setting_Description_security.ldap.simulateBadPassword=This feature will enable Bad Password simulation activity when a forgotten password field is entered.  When an identified user attempts to recover a forgotten password but uses incorrect data, the application will attempt to authenticate to the directory using a known bad password value.  This is done to allow the ldap directory to trigger it's own defense mechanisms against intruders.
-Setting_Description_security.loginCookie.enable=<p>Enable the use of cross-server login cookie session tracking.  This feature allows authenticated users to maintain a login session across multiple server instances of @PwmAppName@.  This feature will also allow users to remain authenticated to the same server after a server restart.</p><p>The setting <a data-gotoSettingLink\="pwm.securityKey">@PwmSettingReference\:pwm.securityKey@</a> must have consistent values across each server participating.  Encrypted user data is stored in a client-agent session cookie.</p>
+Setting_Description_security.loginSession.mode=Mode used to manage login session state.  Local mode is most secure and reliable, but doesn't allow server fail-over.
 Setting_Description_security.page.enableRequestSequence=Enable detection of the use of back button or other browser navigation irregularities.  Enabling this option prevents duplicate HTTP form submissions but can sometimes have side effects.
 Setting_Description_security.page.leaveNoticeTimeout=When a user navigates away from any page, a notice is sent to the server.   The next time a page is requested, the timeout is checked to determine if the last page leave time was greater then the timeout, and if so, the user's session will be invalidated.  This has the effect of logging out users that navigate away from the application without explicitly logging out.If set to zero, this feature is disabled.
 Setting_Description_security.preventFraming=When enabled, prevent this application from being displayed inside an IFrame.  This is done by setting the <i>X-Frame-Options</i> HTTP Header to <i>DENY</i> on all pages.
 Setting_Description_security.redirectUrl.whiteList=A list of partial URL fragments.  Any attempt to set the forwardURL or logoutURL via request parameter\n        must match a URL fragment listed here.\n        <ul>\n          <li>Each item will be attempted to be matched from the <b>beginning</b> of the requested URL string.</li>\n          <li>The redirect URL is decoded and parsed before checked against the whitelist.</li>\n          <li>If an error occurs when setting a redirect URL, set the debug logs to TRACE and watch the output as the error occurs.</li>\n          <li>Wildcards or case mis-matches are not permitted, the values must match exactly.</li>\n          <li>If a fragment has the prefix <i>regex\:</i>, the remainder of the fragment is treated as a regular expression.  Regular expression matches must match the entire URL.</li>\n        </ul>\n        <table>\n        <tr><td>Example</td><td>Matches</td><td>Not Matched</td></tr>\n        <td>https\://www.example.com</td><td>https\://www.example.com<br/>https\://www.example.com/<br/>https\://www.example.com/path</td><td>http\://www.example.com<br/>https\://mail.example.com</td></tr>\n        <td>http\://www.example.com/p1</td><td>http\://www.example.com/p1<br/>http\://www.example.com/p1/p2<br/>http\://www.example.com/p1?a1\=v1</td><td>https\://www.example.com/p1<br/>http\://www.example.com/p2</td></tr>\n        <td>/path1</td><td>/path1<br/>/path1/path2<br/>/path1/path2/?param\=v1</td><td>www.example.com/path1/<br/>https\://www.example.com/path1<br/>/path2</td></tr>\n        <td>regex\:^(https?\:\\/\\/)[a-z]*\\.example\\.com.*?$</td><td>http\://www.example.com<br/>https\://www.example.com<br/>http\://www.example.com/p1<br/>http\://mail.example.com/p1</td><td>www.example.com<br/>http\://www.example.org</td></tr>\n        </table>\n
-Setting_Description_security.sessionBean.mode=Session Bean Mode
+Setting_Description_security.moduleSession.mode=Mode used to manage module session state.  Local mode is most secure and reliable, but doesn't allow server fail-over.
 Setting_Description_security.sso.authHeaderName=With this setting enabled, an upstream server can be configured to allow autologin with a only a username, a password is not required.  This setting controls the name of the HTTP header.  When used, a user will likely be prompted for their password to access certain functionality.
 Setting_Description_session.maxSeconds=Maximum duration of a session (in seconds).  Having a maximum session lifetime prevents certain types of long-term session fixation attacks.
 Setting_Description_shortcut.enable=Enable the shortcuts module.
@@ -720,7 +720,7 @@ Setting_Label_email.updateguest=Guest Registration Update Email
 Setting_Label_email.updateProfile=Update Profile Email
 Setting_Label_email.updateProfile.token=Update Profile Email Verification
 Setting_Label_email.userMailAttribute=User Email Attribute
-Setting_Label_enableSessionVerification=Session Verification
+Setting_Label_enableSessionVerification=Sticky Session Verification
 Setting_Label_events.alert.dailySummary.enable=Daily Summary Alerts
 Setting_Label_events.audit.maxAge=LocalDB Audit Events Storage Max Age
 Setting_Label_events.fileAppender.level=File Log Level
@@ -998,12 +998,12 @@ Setting_Label_response.hashMethod=Responses Storage Hashing Method
 Setting_Label_security.cspHeader=HTTP Content Security Policy Header
 Setting_Label_security.formNonce.enable=Enable Form Nonce
 Setting_Label_security.ldap.simulateBadPassword=Enable Bad Password Simulation
-Setting_Label_security.loginCookie.enable=Enable Cross-Server Session
+Setting_Label_security.loginSession.mode=Login Session Mode
 Setting_Label_security.page.enableRequestSequence=Enable Back Button Detection
 Setting_Label_security.page.leaveNoticeTimeout=Page Leave Notice Timeout
 Setting_Label_security.preventFraming=Prevent HTML Framing
 Setting_Label_security.redirectUrl.whiteList=Redirect Whitelist
-Setting_Label_security.sessionBean.mode=Session Bean Mode
+Setting_Label_security.moduleSession.mode=Module Session Mode
 Setting_Label_security.sso.authHeaderName=SSO Authentication Header Name
 Setting_Label_session.maxSeconds=Maximum Session Duration
 Setting_Label_shortcut.enable=Enable Shortcuts
