add hidden username header field

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -96,6 +96,7 @@ Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be
 Display_Login=
 Display_LoginPasswordOnly=Please enter your password below.  Your current password is required to access this application.
 Display_Logout=<b>You are now signed out.</b><p/>Please close all internet browser windows before you try to sign in again.
+Display_Menu=Menu
 Display_Minute=minute
 Display_Minutes=minutes
 Display_NAAF_PASSWORD=Please provide your NAAF authentication password.
